syntax = "proto3";
package pb;

message AMsg{
  string value = 1;
}

service AService{
  rpc EchoA(AMsg) returns (AMsg);
}
