syntax = "proto3";
package pb;

message BMsg{
  string value = 1;
}

service BService{
  rpc EchoB(BMsg) returns (BMsg);
}
